# clusAI

./: .clusai.toml  .gitignore  Cargo.toml  README.md  README_CN.md  TUTORIAL.md  config.example.toml
crates/ai-cli/: Cargo.toml
crates/ai-cli/src/: main.rs
crates/ai-core/: Cargo.toml
crates/ai-core/examples/: capability_demo.rs  minimal.rs  video_play.rs  voice_speak.rs
crates/ai-core/src/: agent.rs  config.rs  error.rs  export.rs  lib.rs  message.rs  prelude.rs  session.rs
crates/ai-core/src/blueprint/: diff.rs  draft_fs.rs  mod.rs  mode.rs  stage.rs
crates/ai-core/src/context/: agent_context.rs  mod.rs  state.rs
crates/ai-core/src/ext/: context_provider.rs  hook.rs  middleware.rs  mod.rs  plugin.rs
crates/ai-core/src/interface/: agent_handle.rs  input.rs  mod.rs  output.rs
crates/ai-core/src/kernel/: capability.rs  mod.rs
crates/ai-core/src/kernel/tools/: pause.rs
crates/ai-core/src/mcp/: client.rs  mod.rs  server.rs
crates/ai-core/src/provider/: anthropic.rs  deepseek.rs  mod.rs  ollama.rs  openai.rs
crates/ai-core/src/serve/: protocol.rs
crates/ai-core/src/space/: event.rs  mod.rs  tools.rs  world.rs
crates/ai-core/src/tool/: mod.rs  types.rs
crates/ai-core/src/tool/builtin/: bash.rs  glob.rs  grep.rs  mod.rs  read_file.rs  write_file.rs
crates/ai-ffi/: Cargo.toml
crates/ai-ffi/examples/: example.c  example.py
crates/ai-ffi/src/: lib.rs
crates/ai-serve/: Cargo.toml
crates/ai-serve/src/: main.rs
personas/: confucius.json  laozi.json  阿米娅_char_002_amiya.json
