[package]
name = "ai-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Multi-model AI assistant kernel with blueprint collaboration system"

[dependencies]
tokio.workspace = true
tokio-stream.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
async-trait.workspace = true
thiserror.workspace = true
futures.workspace = true
similar.workspace = true
glob-match.workspace = true
regex.workspace = true
dirs.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
tracing.workspace = true
anyhow.workspace = true
