[package]
name = "ai-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "C FFI bindings for ai-core — expose the kernel to Python, Java, Go, C, and more"

[lib]
crate-type = ["cdylib"]

[dependencies]
ai-core = { path = "../ai-core" }
tokio.workspace = true
serde_json.workspace = true
