[package]
name = "ai-serve"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "STDIO JSON server for ai-core — expose the kernel to external frontends"

[dependencies]
ai-core = { path = "../ai-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
